--- a/docs/pages/data/minimization-toolkit/101.md
+++ b/docs/pages/data/minimization-toolkit/101.md
@@ -1,6 +1,6 @@
 ---
-layout: page
 title: Data minimization 101
+layout: single-column
 parentid: Data minimization toolkit
 parentidlink: /data/minimization-toolkit/
 description: What data minimization is and why it matters
