--- a/docs/pages/data/minimization-toolkit/101.md
+++ b/docs/pages/data/minimization-toolkit/101.md
@@ -70,5 +70,6 @@ The concepts reinforce each other. You can't follow the minimum necessary standa
 The IPA is the legal foundation for these principles. The SIMM gives the administrative and technical standards to put them into practice. Together they limit **what** data we collect (minimum necessary) and the **why** (purpose limitation) we use it. They make sure we protect and responsibly manage data  from the start.
 
 <div class="leftright-nav-container">
+    <div class="unused"></div>
     <div class="right-nav"><a class="internal-link" href="/data/minimization-toolkit/best-practices/">Best practices for data minimization</a></div>
 </div>
