--- a/docs/pages/data/minimization-toolkit/101.md
+++ b/docs/pages/data/minimization-toolkit/101.md
@@ -58,10 +58,10 @@ When you follow these policies and regulations, you apply 2 key concepts of data
 
 <div class="twocolumn-table">
 
-| **Purpose limitation** | **Minimum necessary use and disclosure * |
+| **Purpose limitation** | **Minimum necessary use and disclosure** |
 | ----------------------- | ----------------------------------------------------------- | 
 | Data collected is only used for the reason you collected it. It is not used for other purposes without proper justification or consent. | Only access or share the amount of data that’s needed to do the job. |
-| Example: A financial aid worker needs to check someone’s eligibility for student grants. You don’t need to look at someone’s full medical history |
+| Example: A financial aid worker needs to check someone’s eligibility for student grants. You don’t need to look at someone’s full medical history. | Example: A financial aid worker needs to check someone’s eligibility for student grants. You don’t need to look at someone’s full medical history. |
 
 </div>
 
