Added icons and table styling to data min 101 page.

--- a/docs/pages/data/minimization-toolkit/101.md
+++ b/docs/pages/data/minimization-toolkit/101.md
@@ -54,16 +54,28 @@ State departments must follow these laws. That means being careful about what in
 
 When you follow these policies and regulations, you apply 2 key concepts of data privacy.
 
-[TABLE IS A PLACEHOLDER--WILL REPLACE WITH A CUSTOM DESIGN TO MINIMIZE TEXT IN IMAGE]
+<style>
+.twocolumn-table {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.cagov-table {
+  width: 100%;
+}
+.twocolumn-table img {
+    width: 80px;
+}
+</style>
 
-<div class="twocolumn-table">
+<div class="twocolumn-table"><div class="cagov-table"><table><thead><tr>
+<th><img src="/img/data-folder-sharing.png" alt="Folder sharing icon"><p>
+<strong>Purpose limitation</strong></th>
+<th><img src="/img/data-file-search.png" alt="File search icon"><p><strong>Minimum necessary use and disclosure</strong></th></tr></thead>
+<tbody><tr>
+<td>Data collected is only used for the reason you collected it. It is not used for other purposes without proper justification or consent.</td><td>Only access or share the amount of data that’s needed to do the job.</td></tr><tr><td>Example: Someone gives their address to get mailed benefits. You can’t use their address to send program outreach materials without asking first.</td>
+<td>Example: A financial aid worker needs to check someone’s eligibility for student grants. You don’t need to look at someone’s full medical history.</td></tr></tbody>
+</table></div></div>
 
-| **Purpose limitation** | **Minimum necessary use and disclosure** |
-| ----------------------- | ----------------------------------------------------------- | 
-| Data collected is only used for the reason you collected it. It is not used for other purposes without proper justification or consent. | Only access or share the amount of data that’s needed to do the job. |
-| Example: Someone gives their address to get mailed benefits. You can’t use their address to send program outreach materials  without asking first. | Example: A financial aid worker needs to check someone’s eligibility for student grants. You don’t need to look at someone’s full medical history. |
-
-</div>
 
 The concepts reinforce each other. You can't follow the minimum necessary standard without first defining your purpose. 
 
