--- a/docs/pages/data/minimization-toolkit/101.md
+++ b/docs/pages/data/minimization-toolkit/101.md
@@ -65,7 +65,7 @@ When you follow these policies and regulations, you apply 2 key concepts of data
 .twocolumn-table img {
     width: 80px;
 }
-.cagov-table td, .cagov-table th {
+.cagov-table th {
     padding-bottom: 0;
 }
 </style>
