--- a/docs/pages/data/minimization-toolkit/101.md
+++ b/docs/pages/data/minimization-toolkit/101.md
@@ -68,6 +68,9 @@ When you follow these policies and regulations, you apply 2 key concepts of data
 .cagov-table th {
     padding-bottom: 0;
 }
+.cagov-table td {
+  vertical-align: top;
+}
 </style>
 
 <div class="twocolumn-table"><div class="cagov-table"><table><thead><tr>
